# python_coding_contest_template

./: .gitignore  pyproject.toml  setup.cfg
src/: a.py  main.py  regex.py  sub.py
src/common/: logger.py  settings.py
